core/beszel/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beszel-https
spec:
  hostnames:
  - mon.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: shared-https
  rules:
  - timeouts:
      request: 3600s
    backendRefs:
    - name: beszel
      port: 8090
